kubernetes/ccc/07-02-ingress-ccc-master-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ccc-master-ingress
  namespace: ccc
spec:
  rules:
  - host: staging.crab.clickyab.ae
    http:
      paths:
      - backend:
          serviceName: crab-master-service
          servicePort: 9000
        path: /api
      - backend:
          serviceName: chameleon-master-service
          servicePort: 80
        path: /
